# wasm-theme

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/dioxus/: Cargo.toml  Dioxus.toml  README.md  package.json  tailwind.css
examples/dioxus/.cargo/: config.toml
examples/dioxus/assets/: tailwind.css
examples/dioxus/src/: main.rs
src/: lib copy.rs  lib.rs  toggle.rs
