[package]
name = "theme-change"
version = "0.1.0"
edition = "2024"

rust-version = "1.87.0"
description = "Change CSS theme with toggle, buttons or select using CSS custom properties and localStorage."
license = "MIT"
keywords = ["dioxus", "leptos", "theme", "wasm", "web-sys", "yew"]
categories = ["wasm", "web-programming"]
repository = "https://github.com/justins-engineering/theme-change-rust"
authors = ["JES <justin@jes.contact>"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event",
  "Window",
  "Storage",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "NodeList",
]

[dev-dependencies]
