[package]
name = "wasm-theme"
version = "0.1.1"
edition = "2024"
exclude = [
    ".vscode/*",
    ".gitignore",
]

description = "Change the data-theme CSS attribute on the html element with checkbox/toggle, radio-buttons, buttons, and/or select in WASM. The theme variable is saved in local storage. Compatible with tailwindcss and daisyUI."
license = "MIT"
keywords = ["dioxus", "wasm", "web-sys", "tailwindcss", "daisyui"]
categories = ["wasm", "web-programming"]
repository = "https://github.com/justins-engineering/wasm-theme"
authors = ["JES <justin@jes.contact>"]
documentation = "https://docs.rs/wasm-theme/"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event",
  "Window",
  "Storage",
  "HtmlButtonElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "MediaQueryList",
  "Node",
  "NodeList",
]
