[package]
name = "dioxus-example"
version = "0.1.0"
authors = ["JES <code@jes.contact>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = [] }
wasm-theme = { path = "../../" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
